[package]
name = "sui-package-alt"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
clap.workspace = true
move-package-alt.workspace = true
serde.workspace = true
sui-config.workspace = true
sui-sdk.workspace = true
tokio.workspace = true
