[package]
name = "sui-package-alt"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
move-package-alt.workspace = true
serde.workspace = true
shared-crypto.workspace = true
sui-config.workspace = true
sui-sdk.workspace = true
sui-json-rpc-types.workspace = true
sui-keys.workspace = true
tokio.workspace = true
tracing.workspace = true
